<resources>
    <string name="app_name">EcoPoint Admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_points">Точки</string>
    <string name="menu_organizations">Организации</string>
    <string name="menu_users">Пользователи</string>
    <string name="menu_bugs">Баги</string>
    <string name="menu_wrong_rso">Не работающие РСО</string>
    <string name="menu_users_questions">Вопросы пользователей</string>
    <string name="menu_new_rso">Новые РСО</string>
    <string name="menu_points_with_people">Пункты с людьми</string>
    <string name="menu_articles">Статьи</string>
    <string name="title_activity_exchange">ExchangeActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_authorization">Authorization</string>
</resources>